fixed styling on start btn

--- a/scss/main.css
+++ b/scss/main.css
@@ -35,6 +35,8 @@
   padding: 1em;
   border-radius: 5px;
   cursor: pointer;
+  text-decoration: none;
+  color: white;
 }
 
 .startup-container__btn:hover, .startup-container__btn:focus {
