--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,7 @@ body {
   background-color: $color__dark;
   color: white;
   margin: 0 auto;
+  position: relative;
   display: inline;
   font-family: pfs-bold;
   text-transform: uppercase;
