--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,8 @@
 body {
   background-color: $color__dark;
   color: white;
-  margin: 0 auto;
+  margin: 0;
+  padding: 0;
   position: relative;
   display: inline;
   font-family: pfs-bold;
