--- a/scss/_quiz.scss
+++ b/scss/_quiz.scss
@@ -68,6 +68,12 @@
   top: 0;
   left: 0;
 
+  &__text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   &__wrapper {
     position: absolute;
     display: flex;
@@ -88,6 +94,7 @@
     text-decoration: none;
     color: white;
     margin: 1em;
+    padding: 1em 0.5em 1em 0.5em;
   }
 }
 
