--- a/scss/main.css
+++ b/scss/main.css
@@ -399,6 +399,19 @@
   left: 0;
 }
 
+.exit__text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .exit__wrapper {
   position: absolute;
   display: -webkit-box;
@@ -433,6 +446,7 @@
   text-decoration: none;
   color: white;
   margin: 1em;
+  padding: 1em 0.5em 1em 0.5em;
 }
 
 .exit__btn:hover, .exit__btn:focus {
