--- a/scss/main.css
+++ b/scss/main.css
@@ -477,6 +477,51 @@
   }
 }
 
+.highscore {
+  margin: 0 auto;
+  height: 100vh;
+  padding: 3em;
+  font-size: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  max-width: 700px;
+}
+
+.highscore__item {
+  display: -ms-grid;
+  display: grid;
+  gap: 1em;
+  -ms-grid-columns: (minmax(70px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+  grid-auto-flow: column;
+  justify-items: center;
+}
+
+.highscore__btn {
+  background-color: #5aafee;
+  padding: 1em;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  margin: 1em;
+  text-align: center;
+}
+
+.highscore__btn:hover, .highscore__btn:focus {
+  background-color: #3e9fe9;
+  -webkit-transition: 200ms;
+  transition: 200ms;
+}
+
 body {
   background-color: #35414a;
   color: white;
@@ -488,6 +533,7 @@ body {
   text-transform: uppercase;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  height: 100vh;
   max-height: 100vh;
 }
 /*# sourceMappingURL=main.css.map */
