--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -5,7 +5,6 @@
   font-size: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   max-width: 700px;
 
   &__list-container {
@@ -14,9 +13,7 @@
   &__item {
     display: grid;
     gap: 1em;
-    grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
     grid-auto-flow: column;
-    justify-items: center;
   }
 
   &__btn {
@@ -25,5 +22,13 @@
     color: white;
     margin: 1em;
     text-align: center;
+  }
+
+  &__name {
+    justify-self: start;
+  }
+
+  &__points {
+    justify-self: end;
   }
 }
