--- a/scss/main.css
+++ b/scss/main.css
@@ -489,9 +489,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   max-width: 700px;
 }
 
@@ -499,10 +496,7 @@
   display: -ms-grid;
   display: grid;
   gap: 1em;
-  -ms-grid-columns: (minmax(70px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
   grid-auto-flow: column;
-  justify-items: center;
 }
 
 .highscore__btn {
@@ -520,6 +514,16 @@
   background-color: #3e9fe9;
   -webkit-transition: 200ms;
   transition: 200ms;
+}
+
+.highscore__name {
+  -ms-grid-column-align: start;
+      justify-self: start;
+}
+
+.highscore__points {
+  -ms-grid-column-align: end;
+      justify-self: end;
 }
 
 body {
