--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -1,36 +1,48 @@
 .highscore {
-  margin: 0 auto;
+  margin: 1.5em auto;
+  border-radius: 10px;
+  max-width: 90%;
+  background-color: #86919a;
+  padding-bottom: 1em;
   height: 100vh;
-  padding: 3em;
   font-size: 1rem;
   display: flex;
   flex-direction: column;
   max-width: 700px;
 
-  &__list-container {
+  &__headline {
+    margin: 0.5em 0 0 0.5em;
   }
 
   &__item {
     display: grid;
     gap: 1em;
-    grid-auto-flow: column;
-    grid-template-columns: 1fr 1fr 1fr;
+    ggrid-template-columns: minmax(50px, 90px) auto auto;
+    justify-self: center;
+
+    &:nth-child(even) {
+      background-color: #73d0f440;
+    }
   }
 
   &__btn {
     @include btn;
     text-decoration: none;
     color: white;
-    margin: 1em;
     text-align: center;
+    margin-left: 1em;
+    margin-right: 1em;
+    text-align: center;
+    margin-bottom: 1em;
   }
 
   &__name {
     justify-self: start;
+    margin-left: 1em;
   }
 
   &__difficulty {
-    justify-self: center;
+    justify-self: end;
   }
 
   &__points {
