--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   max-width: 700px;
+  width: 85%;
 
   &__headline {
     margin: 0.5em 0 0 0.5em;
@@ -16,7 +17,7 @@
   &__item {
     display: grid;
     gap: 1em;
-    grid-template-columns: minmax(50px, 90px) auto auto;
+    grid-template-columns: minmax(50px, 100px) auto auto;
     justify-self: center;
 
     &:nth-child(even) {
