--- a/scss/main.css
+++ b/scss/main.css
@@ -495,6 +495,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   max-width: 700px;
+  width: 85%;
 }
 
 .highscore__headline {
@@ -505,8 +506,8 @@
   display: -ms-grid;
   display: grid;
   gap: 1em;
-  -ms-grid-columns: minmax(50px, 90px) auto auto;
-      grid-template-columns: minmax(50px, 90px) auto auto;
+  -ms-grid-columns: minmax(50px, 100px) auto auto;
+      grid-template-columns: minmax(50px, 100px) auto auto;
   -ms-grid-column-align: center;
       justify-self: center;
 }
@@ -557,7 +558,6 @@ body {
   margin: 0;
   padding: 0;
   position: relative;
-  display: inline;
   font-family: pfs-bold;
   text-transform: uppercase;
   -webkit-box-sizing: border-box;
