--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -7,8 +7,6 @@
   font-size: 1rem;
   display: flex;
   flex-direction: column;
-  max-width: 700px;
-  width: 85%;
 
   &__headline {
     margin: 0.5em 0 0 0.5em;
@@ -48,4 +46,13 @@
     justify-self: end;
     margin-right: 1em;
   }
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 700px;
+  width: 85%;
+  padding: 1.5em;
 }
