--- a/scss/main.css
+++ b/scss/main.css
@@ -494,8 +494,6 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  max-width: 700px;
-  width: 85%;
 }
 
 .highscore__headline {
@@ -550,6 +548,21 @@
   -ms-grid-column-align: end;
       justify-self: end;
   margin-right: 1em;
+}
+
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 700px;
+  width: 85%;
+  padding: 1.5em;
 }
 
 body {
