--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -1,12 +1,12 @@
 .highscore {
   margin: 1.5em auto;
   border-radius: 10px;
-  max-width: 90%;
   background-color: #86919a;
   padding-bottom: 1em;
   font-size: 1rem;
   display: flex;
   flex-direction: column;
+  width: 100%;
 
   &__headline {
     margin: 0.5em 0 0 0.5em;
@@ -53,6 +53,6 @@
   justify-content: center;
   align-items: center;
   max-width: 700px;
-  width: 85%;
-  padding: 1.5em;
+  margin: 0 auto;
+  height: 100%;
 }
