--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -52,6 +52,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 85%;
   max-width: 700px;
   margin: 0 auto;
   height: 100%;
