--- a/scss/main.css
+++ b/scss/main.css
@@ -560,6 +560,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 85%;
   max-width: 700px;
   margin: 0 auto;
   height: 100%;
