--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .hero {
@@ -21,6 +21,6 @@
     @include btn;
     text-decoration: none;
     color: white;
-    margin: 1em;
+    margin: 0.5em;
   }
 }
