--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -1,8 +1,7 @@
 .highscore {
-  margin: 1.5em auto;
+  margin: 0 auto;
   border-radius: 10px;
   background-color: #86919a;
-  padding-bottom: 1em;
   font-size: 1rem;
   display: flex;
   flex-direction: column;
