--- a/scss/main.css
+++ b/scss/main.css
@@ -481,10 +481,9 @@
 }
 
 .highscore {
-  margin: 1.5em auto;
+  margin: 0 auto;
   border-radius: 10px;
   background-color: #86919a;
-  padding-bottom: 1em;
   font-size: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
