--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -30,6 +30,7 @@
     margin-left: 1em;
     margin-right: 1em;
     text-align: center;
+    margin-bottom: 1em;
   }
 
   &__name {
@@ -55,4 +56,5 @@
   max-width: 700px;
   margin: 0 auto;
   height: 100%;
+  margin-top: 3em;
 }
