--- a/scss/main.css
+++ b/scss/main.css
@@ -524,6 +524,7 @@
   margin-left: 1em;
   margin-right: 1em;
   text-align: center;
+  margin-bottom: 1em;
 }
 
 .highscore__btn:hover, .highscore__btn:focus {
@@ -563,6 +564,7 @@
   max-width: 700px;
   margin: 0 auto;
   height: 100%;
+  margin-top: 3em;
 }
 
 body {
