--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -3,7 +3,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
 .hero {
