--- a/scss/main.css
+++ b/scss/main.css
@@ -17,7 +17,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
 .hero {
@@ -564,7 +565,6 @@
   max-width: 700px;
   margin: 0 auto;
   height: 100%;
-  margin-top: 3em;
 }
 
 body {
@@ -578,6 +578,5 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   height: 100vh;
-  max-height: 100vh;
 }
 /*# sourceMappingURL=main.css.map */
