--- a/scss/main.css
+++ b/scss/main.css
@@ -17,7 +17,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
@@ -564,8 +564,9 @@
   width: 85%;
   max-width: 700px;
   margin: 0 auto;
-  height: 100%;
+  min-height: 100%;
   margin-top: 2em;
+  margin-bottom: 2em;
 }
 
 body {
