--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -55,7 +55,7 @@
   width: 85%;
   max-width: 700px;
   margin: 0 auto;
-  min-height: 100%;
+  min-height: 100vh;
   margin-top: 2em;
   margin-bottom: 2em;
 }
