--- a/scss/main.css
+++ b/scss/main.css
@@ -564,7 +564,7 @@
   width: 85%;
   max-width: 700px;
   margin: 0 auto;
-  min-height: 100%;
+  min-height: 100vh;
   margin-top: 2em;
   margin-bottom: 2em;
 }
