--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,6 @@ body {
   position: relative;
   font-family: pfs-bold;
   text-transform: uppercase;
-  box-sizing: border-box;
+  // box-sizing: border-box;
   height: 100%;
 }
