--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -1,5 +1,5 @@
 .highscore {
-  margin: 0 auto;
+  margin: 1.5em auto;
   border-radius: 10px;
   background-color: #86919a;
   font-size: 1rem;
@@ -52,4 +52,5 @@
   width: 85%;
   max-width: 700px;
   margin: 0 auto;
+  height: 100vh;
 }
