--- a/scss/main.css
+++ b/scss/main.css
@@ -482,7 +482,7 @@
 }
 
 .highscore {
-  margin: 0 auto;
+  margin: 1.5em auto;
   border-radius: 10px;
   background-color: #86919a;
   font-size: 1rem;
@@ -555,6 +555,7 @@
   width: 85%;
   max-width: 700px;
   margin: 0 auto;
+  height: 100vh;
 }
 
 body {
