--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -1,11 +1,12 @@
 .highscore {
-  margin: 1.5em auto;
+  margin: 0 auto;
   border-radius: 10px;
   background-color: #86919a;
   font-size: 1rem;
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin-top: 1.5em;
 
   &__headline {
     margin: 0.5em 0 0 0.5em;
