--- a/scss/main.css
+++ b/scss/main.css
@@ -482,7 +482,7 @@
 }
 
 .highscore {
-  margin: 1.5em auto;
+  margin: 0 auto;
   border-radius: 10px;
   background-color: #86919a;
   font-size: 1rem;
@@ -494,6 +494,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
+  margin-top: 1.5em;
 }
 
 .highscore__headline {
