--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -6,7 +6,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-top: 1.5em;
 
   &__headline {
     margin: 0.5em 0 0 0.5em;
@@ -54,4 +53,6 @@
   max-width: 700px;
   margin: 0 auto;
   height: 740px;
+  display: flex;
+  align-items: center;
 }
