--- a/scss/main.css
+++ b/scss/main.css
@@ -494,7 +494,6 @@
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100%;
-  margin-top: 1.5em;
 }
 
 .highscore__headline {
@@ -557,6 +556,12 @@
   max-width: 700px;
   margin: 0 auto;
   height: 740px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 body {
