--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -5,6 +5,9 @@
   flex-direction: column;
   height: 100vh;
   width: 100%;
+  animation: fadeIn ease-in 1;
+  animation-duration: 200ms;
+  animation-fill-mode: forwards;
 }
 
 .hero {
