--- a/scss/_quiz.scss
+++ b/scss/_quiz.scss
@@ -1,15 +1,19 @@
 .quiz {
-  display: grid;
-  grid-template-rows: auto 1fr auto 1fr;
   height: 100vh;
-  align-content: center;
-  gap: 1em;
-  max-width: 900px;
   margin: 0 auto;
+  max-width: 900px;
   padding: 1em;
   max-height: 100vh;
   box-sizing: border-box;
+  display: grid;
+  grid-template-rows: auto 1fr;
 
+  &__question-wrapper {
+    display: grid;
+    grid-template-rows: 1fr auto auto 1fr;
+    align-content: center;
+    gap: 1em;
+  }
   &__category {
     text-align: center;
   }
@@ -54,6 +58,10 @@
     color: white;
     border: none;
     min-height: 100px;
+
+    &:focus {
+      box-shadow: inset 0px 0px 0px 5px rgb(231, 231, 0);
+    }
   }
 }
 
