--- a/scss/_score.scss
+++ b/scss/_score.scss
@@ -6,6 +6,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  opacity: 0;
+  animation: fadeIn ease-in 1;
+  animation-duration: 200ms;
+  animation-fill-mode: forwards;
 
   &__headline {
     margin: 0.5em 0 0 0.5em;
