--- a/scss/_setup.scss
+++ b/scss/_setup.scss
@@ -16,6 +16,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    opacity: 0;
+    animation: fadeIn ease-in 1;
+    animation-duration: 200ms;
+    animation-fill-mode: forwards;
 
     @media (min-width: 768px) {
       width: 70%;
@@ -170,5 +174,14 @@
   }
   to {
     transform: scaleY(0);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
