--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -12,6 +12,7 @@ $color__blue-sec: #3e9fe9;
   background-color: $color__blue;
   padding: 1em;
   border-radius: 5px;
+  outline: none;
   cursor: pointer;
 
   &:hover,
