added anim to exit splash

--- a/scss/main.css
+++ b/scss/main.css
@@ -456,6 +456,13 @@
           justify-content: center;
   top: 0;
   left: 0;
+  opacity: 0;
+  -webkit-animation: fadeIn ease-in 1;
+          animation: fadeIn ease-in 1;
+  -webkit-animation-duration: 200ms;
+          animation-duration: 200ms;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
 }
 
 .exit__text-container {
