--- a/scss/_quiz.scss
+++ b/scss/_quiz.scss
@@ -75,6 +75,10 @@
   justify-content: center;
   top: 0;
   left: 0;
+  opacity: 0;
+  animation: fadeIn ease-in 1;
+  animation-duration: 200ms;
+  animation-fill-mode: forwards;
 
   &__text-container {
     display: flex;
