--- a/scss/main.css
+++ b/scss/main.css
@@ -493,9 +493,10 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 2em;
+  padding: 1em;
   background: #35414a;
   border-radius: 7px;
+  text-align: center;
 }
 
 .exit__btn-cont {
